--- a/.github/workflows/build-sample.yml
+++ b/.github/workflows/build-sample.yml
@@ -1,14 +1,12 @@
 name: Build and Test Sample
 
 on:
-  workflow_call:
-    inputs:
-      name:
-        required: true
-        type: string
-      path:
-        required: true
-        type: string
+  pull_request_target:
+    types:
+      - opened
+      - edited
+      - synchronize
+      - reopened
 
 concurrency:
   group: ${{ inputs.name }}-build-${{ github.ref }}
